--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
 <body>
 <!--注释能不能删除呢-->
 <h1>hahah</h1>
+在线修改是否可以啊
+是不是
 %NVM_HOME%;%NVM_SYMLINK%;%NPM_HOME%;%GIT_HOME%\bin;
 <img src="images/detail01.jpg" alt=""/>
 <script src="scripts/all.js"></script>
